apply css style on chevron only on mobile, https://github.com/club-soda/club-soda-guide/pull/484#issuecomment-463952963

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -681,11 +681,12 @@ i {
 .mw-1500px {
   max-width: 1500px;
 }
+@media (max-width: 60em ) {
+  .left-0-5 {
+    left: -0.5rem;
+  }
 
-.left-0-5 {
-  left: -0.5rem;
-}
-
-.right-0-5 {
-  right: -0.5rem;
+  .right-0-5 {
+    right: -0.5rem;
+  }
 }
